[package]
authors = ['InvArchitects <https://github.com/InvArch>']
description = ''
edition = '2021'
homepage = 'https://invarch.network'
license = 'GPLv3'
name = 'pallet-inv4'
repository = 'https://github.com/InvArch/InvArch-Frames'
version = '0.1.0-dev'

[dependencies]
serde = { workspace = true, optional = true }
codec = {workspace = true}
sp-runtime = {workspace = true}
sp-arithmetic = {workspace = true}
sp-std = {workspace = true}
frame-support = {workspace = true}
smallvec = {workspace = true}

scale-info = {workspace = true}

log = {workspace = true}

# InvArch dependencies
primitives = { package = "invarch-primitives", path = "../../primitives", default-features = false }

sp-io = {workspace = true}
sp-core = {workspace = true}

pallet-balances = {workspace = true}

frame-system = {workspace = true} # frame-benchmarking requires system
frame-benchmarking = { workspace = true, optional = true }

orml-tokens2 = {workspace = true}

xcm = {workspace = true}

[dev-dependencies]
sp-core = {workspace = true}
orml-traits = {workspace = true}
orml-traits2 = {workspace = true}
orml-tokens = {workspace = true}
orml-asset-registry = {workspace = true}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
  "sp-io/std",
  "scale-info/std",
  "pallet-balances/std",
	"frame-benchmarking?/std",
  "orml-asset-registry/std",
  "orml-tokens/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
