[package]
authors = ['InvArchitects <https://github.com/InvArch>']
description = ''
edition = '2021'
homepage = 'https://invarch.network'
license = 'GPLv3'
name = 'pallet-inv4'
repository = 'https://github.com/InvArch/InvArch-Frames'
version = '0.1.0-dev'

[dependencies]
serde = { workspace = true, optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive", "max-encoded-len"
] }
sp-runtime = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
smallvec = { workspace = true }

scale-info = { workspace = true, default-features = false }

log = { workspace = true, default-features = false }

# InvArch dependencies
primitives = { package = "invarch-primitives", path = "../../primitives", default-features = false }

sp-io = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }

pallet-balances = { workspace = true, default-features = false }

frame-system = { workspace = true, default-features = false }                        # frame-benchmarking requires system
frame-benchmarking = { workspace = true, default-features = false, optional = true }


xcm = { workspace = true, default-features = false }
orml-tokens2 = { workspace = true, default-features = false }

[dev-dependencies]

orml-traits2 = { workspace = true, default-features = false }
orml-tokens = { workspace = true, default-features = false }
orml-traits = { workspace = true, default-features = false }
orml-asset-registry = { workspace = true, default-features = false }


[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "scale-info/std",
    "pallet-balances/std",
    "frame-benchmarking?/std",
    "xcm/std",
    "orml-asset-registry/std",
    "orml-tokens/std",
    "orml-tokens2/std",
    "orml-traits/std",
    "orml-traits2/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
