[package]
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'IPF Pallet for tokenizing and managing intellectual property'
edition = '2018'
homepage = 'https://invarch.network'
license = 'GPLv3'
name = 'pallet-ipf'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/ipf'
version = '0.1.0-dev'

[dependencies]
serde = { version = "1.0.132", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
primitives = { package = "invarch-primitives", path = "../../primitives", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
scale-info = { version = "2.0.0", features = ["derive"], default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
  "primitives/std",
  "sp-io/std",
  "scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]
