[package]
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'IPS Pallet for creating and managing sets of tokenized IP'
edition = '2018'
homepage = 'https://invarch.network'
license = 'GPLv3'
name = 'pallet-ipt'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/ips'
version = '0.1.0-dev'

[dependencies]
serde = { version = "1.0.132", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

scale-info = { version = "2.0.0", features = ["derive"], default-features = false }

# InvArch dependencies
primitives = { package = "invarch-primitives", path = "../../primitives", default-features = false }

sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.18", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
  "sp-io/std",
  "scale-info/std",
  "pallet-balances/std"
]
try-runtime = ["frame-support/try-runtime"]

